# healing-home-app

./: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/skills/testing-thha/: SKILL.md
backend/: Dockerfile  backup_cron.py  pyproject.toml  railway.toml
backend/app/: auth.py  backup.py  config.py  content.py  database.py  main.py  seed.py  stripe_billing.py
public/: manifest.json
src/: App.tsx  index.css
src/components/: Navbar.tsx  SafetyFooter.tsx
src/contexts/: AuthContext.tsx
src/pages/: AccessGate.tsx  AccountSettings.tsx  AdminDashboard.tsx  CaregiverSupport.tsx  CrisisMode.tsx  Dashboard.tsx  DisclaimerGate.tsx  FamilyPlan.tsx  GrowthTracker.tsx  KidsRegulationTools.tsx  LandingPage.tsx  LearningLibrary.tsx  MandatedReporterGuide.tsx  NotFound.tsx  PrintablesVault.tsx  PrivacyPolicy.tsx  RegulateMeNow.tsx  ResourceLibrary.tsx  SafetyResources.tsx  ScriptsLibrary.tsx  TermsOfService.tsx  Tools.tsx  TryAgainTool.tsx
