[project]
name = "healing-home-backend"
version = "0.1.0"
description = "Backend API for The Healing Home Approach"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyjwt>=2.9.0",
    "pydantic>=2.9.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
